Updated project 1.html

--- a/project 1.html
+++ b/project 1.html
@@ -12,7 +12,7 @@
             in computer science, software engineering, and <u>emerging technologies.</u></p>
             <h1> Semester 1 Subjects</h1>
             <ol>
-                <li>Mathematic-I</li>
+                <li>Mathematic I</li>
                 <li>Physics</li>
                 <li>Basics Electrical Engineering</li>
                 <li>Programming in C</li>
