--- a/practice2.html
+++ b/practice2.html
@@ -13,7 +13,7 @@
         <nav>
             <a href="hhtps:/world.com">World</a> |
             <a href="https:/Sports.com">Sports</a> |
-            <a href="https:/entartainment">entartainment</a> |
+            <a href="https:/entartainment">Entartainment</a> |
             <a href="https:/podcast.com">podcast</a> |
             <a href="https:/Contact.com">Contact</a> 
         </nav>
