--- a/project3.html
+++ b/project3.html
@@ -24,7 +24,7 @@
             <option>Double Seater</option>
             <option>Triple Seater</option>
         </select><br><br>
-        <label for="guard">Number of guard:</label>
+        <label for="guard">Number of guards:</label>
         <input type="text" id="guard" name="guard"><br><br>
         Special Reports<bR><textarea name="requests" id="requests" cols="40" rows="4"></textarea><br><br>
             <input type="submit" value="Book now">
