--- a/project4.html
+++ b/project4.html
@@ -31,7 +31,7 @@
      </tr>
      <tr>
         <th>Tuesday</th>
-        <td>C programming</td>
+        <td>C Programming</td>
         <td>Break</td>
         <td colspan="2">Electronics Lab</td>
         <td>Library</td>
