Updated project 5.html

--- a/project 5.html
+++ b/project 5.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <center><h1>Student Registration Form</h1></center><hr>
+    <center><h1>Student registration Form</h1></center><hr>
     <form action="/submit" method="post" >
     Full name:<input type="text" placeholder="Enter your full name" required><br><br>
     Email:<input type="text" placeholder="Enter vaid email address" required><br><br>
