--- a/Experiment7.html
+++ b/Experiment7.html
@@ -20,9 +20,9 @@
     <a href="#">Home</a>
     <a href="#">Products</a>
     <a href="#">About</a>
-    <a href="#">Contact</a>
+    <a href="#">Contacts</a>
     </div><br>
-    <h2>Inline-Block Example</h2>
+    <h2>Inline-Block Examples</h2>
     <div class="inlet"><br>
         <a href="#">Home</a>
         <a href="#">Products</a>
