--- a/Experiment8.html
+++ b/Experiment8.html
@@ -15,7 +15,7 @@
             <div id="circle">JK</div>
             <p id="name">Jeet Kumar</p>
             <p id="info">B.Tech-CSE</p>
-            <p id="info">Rollno:2025cs25</p>
+            <p id="info">Rollno:2025CS25</p>
             <p id="info">1st Year</p>
           </button>
         </div>
@@ -24,7 +24,7 @@
             <div id="circle">AK</div>
             <p id="name">Asha Kumari</p>
             <p id="in. fo">B.Tech-CSE</p>
-            <p id="info">Rollno:2025cs27</p>
+            <p id="info">Roll no:2025cs27</p>
             <p id="info">1st Year</p>
           </button>
         </div>
