Updated Experiment 9.html

--- a/Experiment 9.html
+++ b/Experiment 9.html
@@ -83,7 +83,7 @@ body {
             <img src="https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcTSYviAw1egwgERIzrwt7bLXUR-rFWWykMfW71C4q-85k24Yp8ukjiQZMfCxbofHUyp5ywqMOWuv7vSLKW3xJkxYv7zJwJFm7UsJIf0XbfGy23MFcbQnZZSz9S_m9FWdO2Rjw&usqp=CAc"
             alt="HP_LAPTOP">
             <h2 class="heading">HP 255 G10 Laptop(16GB RAM,512GB SSD,Ryzen 3)</h2>
-            <p class="para">A fast and reliable laptop ideal for daily work, browsing, and multitasking</p>
+            <p class="para">A fast and reliable laptops ideal for daily work, browsing, and multitasking</p>
             <h3 class="price">₹999</h3>
             <button class="buy">Buy Now</button>
         </div>
