--- a/Experiment10.html
+++ b/Experiment10.html
@@ -14,7 +14,7 @@
         <li><a href="#">Products</a></li>
         <li><a href="#">Categories</a></li>
         <li><a href="#">Deals</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#">Contacts</a></li>
       </ul>
 
       <div class="actions"></div>
