--- a/Listsnavmenu.html
+++ b/Listsnavmenu.html
@@ -14,7 +14,7 @@
     <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">Address</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#">Contacts</a></li>
         <li><a href="#">Info</a></li>
     </ul>
 </body>
