Updated midterm 1solution_1092.html

--- a/midterm 1solution_1092.html
+++ b/midterm 1solution_1092.html
@@ -17,7 +17,7 @@
                 <li>Basics Electrical Engineering</li>
                 <li>Programming in C</li>
                 <LI>Engineering Drawing</LI>
-                <li>Web Designing Workshop-1</li>
+                <li>Web Designings Workshop-1</li>
                 <li>Essential of AI</li>
             </ol>
             <h1>Programming Language</h1>
