--- a/EMBEDDINGMEDIA.html
+++ b/EMBEDDINGMEDIA.html
@@ -26,7 +26,7 @@
        </video><br><br>
         <audio controls>
             <source src="sound.mp3" type="audio/mpeg">
-            your browser does not support the aduio element.
+            your browser does not supports the aduio element.
         </audio>
 </body>
 </html>
